# airlive-for-obs

./: .gitignore  CMakeLists.txt  README.md  THIRD-PARTY-NOTICES.md
data/locale/: en-US.ini
scripts/: build-macos.sh  make-installer.sh  uninstall.command
src/: airlive-connection.cpp  airlive-connection.hpp  airlive-source.cpp  auth.hpp  bonjour-service.cpp  bonjour-service.hpp  h264-decoder.cpp  h264-decoder.hpp  net-compat.hpp  packet-parser.cpp  packet-parser.hpp  secret-store.hpp  wire.hpp
tests/: auth-kat.cpp  run-auth-kat.sh
